--- a/web/package.json
+++ b/web/package.json
@@ -49,82 +49,11 @@
     "build": "vite build",
     "coverage": "VITE_COVERAGE=true vite build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "jest --coverage --no-cache",
+    "test": "vitest run --coverage",
     "report": "nyc report -r clover -r json -r lcov -r text"
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": [
-        "esbuild-jest",
-        {
-          "sourcemap": true
-        }
-      ],
-      "^.+\\.(css|png|svg)$": "jest-transform-stub"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$"
-    ],
-    "moduleNameMapper": {
-      "^@root/(.*)$": [
-        "<rootDir>/src/$1"
-      ],
-      "^@assets/(.*)$": [
-        "<rootDir>/src/assets/$1"
-      ],
-      "^@components/(.*)$": [
-        "<rootDir>/src/components/$1"
-      ],
-      "^@constants/(.*)$": [
-        "<rootDir>/src/constants/$1"
-      ],
-      "^@hooks/(.*)$": [
-        "<rootDir>/src/hooks/$1"
-      ],
-      "^@i18n/(.*)$": [
-        "<rootDir>/src/i18n/$1"
-      ],
-      "^@layouts/(.*)$": [
-        "<rootDir>/src/layouts/$1"
-      ],
-      "^@models/(.*)$": [
-        "<rootDir>/src/models/$1"
-      ],
-      "^@services/(.*)$": [
-        "<rootDir>/src/services/$1"
-      ],
-      "^@themes/(.*)$": [
-        "<rootDir>/src/themes/$1"
-      ],
-      "^@utils/(.*)$": [
-        "<rootDir>/src/utils/$1"
-      ],
-      "^@views/(.*)$": [
-        "<rootDir>/src/views/$1"
-      ]
-    },
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
   },
   "browserslist": {
     "production": [
@@ -145,7 +74,6 @@
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-conventional": "17.4.4",
     "@limegrass/eslint-plugin-import-alias": "1.0.6",
-    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@types/jest": "29.4.0",
     "@types/node": "18.14.0",
@@ -156,8 +84,8 @@
     "@typescript-eslint/eslint-plugin": "5.52.0",
     "@typescript-eslint/parser": "5.52.0",
     "@vitejs/plugin-react": "3.1.0",
+    "@vitest/coverage-c8": "0.28.5",
     "esbuild": "0.17.9",
-    "esbuild-jest": "0.5.0",
     "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-config-react-app": "7.0.1",
@@ -168,11 +96,8 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "happy-dom": "8.4.3",
     "husky": "8.0.3",
-    "jest": "29.4.3",
-    "jest-environment-jsdom": "29.4.3",
-    "jest-transform-stub": "2.0.0",
-    "jest-watch-typeahead": "2.2.2",
     "prettier": "2.8.4",
     "react-test-renderer": "18.2.0",
     "typescript": "4.9.5",
@@ -180,6 +105,7 @@
     "vite-plugin-eslint": "1.8.1",
     "vite-plugin-istanbul": "4.0.0",
     "vite-plugin-svgr": "2.4.0",
-    "vite-tsconfig-paths": "4.0.5"
+    "vite-tsconfig-paths": "4.0.5",
+    "vitest": "0.28.5"
   }
 }
