--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "coverage": "VITE_COVERAGE=true vite build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "test": "vitest run --coverage",
+    "test:watch": "vitest --coverage",
     "report": "nyc report -r clover -r json -r lcov -r text"
   },
   "eslintConfig": {
@@ -73,11 +74,13 @@
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-conventional": "17.4.4",
     "@limegrass/eslint-plugin-import-alias": "1.0.6",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.14.0",
     "@types/qrcode.react": "1.0.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/testing-library__jest-dom": "5.14.5",
     "@types/zxcvbn": "4.4.1",
     "@typescript-eslint/eslint-plugin": "5.52.0",
     "@typescript-eslint/parser": "5.52.0",
